Fix navbar overlap

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -17,3 +17,7 @@ code {
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body{
+  @apply bg-gray-300;
+}
